# jjnt-server-app

./: .bashrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
jjnt_api/: consts.py  crud.py  database.py  log_config.py  main.py  models.py  responses.py  schemas.py  scripts.py
tests/: test_jjnt_api.py
